[package]
name = "rclc"
version = "0.8.7"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]
repository = "https://github.com/VladimirMarkelov/rclc"
readme = "README.md"
license = "MIT"
description = "Mathematical expression calculator supporting common fraction, complex numbers, and long integers"
keywords = ["calculator", "terminal", "cli", "math"]

[dependencies]
getopts = "0.2"
atty = "0.2"
rcalc_lib = "0.9"

[package.metadata.deb]
section = "utility"
depends = "$auto"
priority = "optional"
assets = [
	["target/release/rclc", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/rclc/", "644"],
	["doc.md", "usr/share/doc/rclc/README", "644"],
]
extended-description = """\
A powerful terminal calculator that transparently works \
float number, big integer numbers, complex numbers, and \
common fractions. Basic variable and script support \
allows anyone to create a library of own constants and \
preload them on the calculator startup.\
"""
changelog = "changelog"

